// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bins actual cycles by day: cycles binned by day and part 1`] = `
Immutable.Map {
  Immutable.Record {
    "day": 2018-03-05T06:00:00.000Z,
    "part": "parts-2",
  }: 1,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "part": "part6-4",
  }: 1,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "part": "partx-0",
  }: 1,
}
`;

exports[`bins actual cycles by day: cycles binned by day and station 1`] = `
Immutable.Map {
  Immutable.Record {
    "day": 2018-03-05T06:00:00.000Z,
    "station": "L/U #1",
  }: 0.0001,
  Immutable.Record {
    "day": 2018-03-05T06:00:00.000Z,
    "station": "MC #1",
  }: 0.0005,
  Immutable.Record {
    "day": 2018-03-05T06:00:00.000Z,
    "station": "L/U #2",
  }: 0.00005,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "station": "L/U #1",
  }: 0.0002,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "station": "MC #1",
  }: 0.0005833333333333333,
  Immutable.Record {
    "day": 2018-03-04T06:00:00.000Z,
    "station": "L/U #2",
  }: 0.0001,
}
`;

exports[`loads a specific month for analysis: selected month with 27 days ago, 2 days ago, and today 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "paltt": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-06T09:45:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:05.000Z,
          "y": 44,
        },
      ],
      "palss": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "partCCC-3": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "partCCC",
            "process": 3,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-06T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 18,
            "completed": false,
            "isLabor": false,
            "part": "partCCC",
            "process": 3,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-06T09:30:05.000Z,
            "y": 18,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "partCCC",
            "process": 3,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-06T09:40:05.000Z,
            "y": 3,
          },
        ],
      },
      "partBBB-2": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "partBBB",
            "process": 2,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "isLabor": false,
            "part": "partBBB",
            "process": 2,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "partBBB",
            "process": 2,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "partAAA-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "partAAA",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "isLabor": false,
            "part": "partAAA",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "partAAA",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
        ],
      },
    },
    "station_groups": Immutable.Set [
      "L/U",
      "MC",
    ],
  },
  "inspection": Object {
    "by_part": Immutable.Map {
      Immutable.Record {
        "part": "partCCC",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 47455,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-06T09:45:05.000Z,
        },
        Object {
          "materialID": 47455,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-01-06T09:52:05.000Z,
        },
      ],
      Immutable.Record {
        "part": "partBBB",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 41703,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 41703,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-01-31T09:58:05.000Z,
        },
      ],
      Immutable.Record {
        "part": "partAAA",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 68845,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 68845,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-02-02T10:04:05.000Z,
        },
      ],
    },
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;

exports[`processes new log events into last30: last30 with 2 days ago, today, and 6 days from now 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "palbb": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:05.000Z,
          "y": 44,
        },
      ],
      "palcc": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-08T09:39:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "part222-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "isLabor": false,
            "part": "part222",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "part111-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-08T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "isLabor": false,
            "part": "part111",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
          Object {
            "active": 12,
            "completed": false,
            "isLabor": false,
            "part": "part111",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-08T09:24:05.000Z,
            "y": 12,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-08T09:34:05.000Z,
            "y": 3,
          },
        ],
      },
    },
    "station_groups": Immutable.Set [
      "L/U",
      "MC",
    ],
  },
  "inspection": Object {
    "by_part": Immutable.Map {
      Immutable.Record {
        "part": "part222",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 19656,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 19656,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-01-31T09:58:05.000Z,
        },
      ],
      Immutable.Record {
        "part": "part111",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 70329,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 70329,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-02-02T10:04:05.000Z,
        },
        Object {
          "materialID": 58696,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-08T09:39:05.000Z,
        },
        Object {
          "materialID": 58696,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-02-08T09:46:05.000Z,
        },
      ],
    },
  },
  "latest_log_counter": 7,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": Immutable.Set [
      "Insp1",
    ],
    "matsById": Immutable.Map {
      70329: Object {
        "completedInspections": Object {
          "Insp1": 2018-02-02T10:04:05.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqi",
        "last_event": 2018-02-02T10:04:05.000Z,
        "materialID": 70329,
        "partName": "part111",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
      58696: Object {
        "completedInspections": Object {
          "Insp1": 2018-02-08T09:46:05.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqw",
        "last_event": 2018-02-08T09:46:05.000Z,
        "materialID": 58696,
        "partName": "part111",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
    },
  },
  "most_recent_10_events": Array [
    Object {
      "active": "00:00:00",
      "counter": 7,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T10:04:05.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
    Object {
      "active": "00:06:00",
      "counter": 0,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-08T09:03:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 1,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-08T09:09:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "palcc",
      "program": "LOAD",
      "result": "LOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:12:00",
      "counter": 2,
      "elapsed": "00:12:00",
      "endUTC": 2018-02-08T09:12:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:12:00",
      "counter": 3,
      "elapsed": "00:12:00",
      "endUTC": 2018-02-08T09:24:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "palcc",
      "program": "progv",
      "result": "",
      "startofcycle": false,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-08T09:31:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-08T09:34:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "palcc",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 6,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-08T09:39:05.000Z,
      "loc": "Inspection",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "",
      "program": "ignored,Insp1,P6,S4",
      "result": "True",
      "startofcycle": false,
      "type": "Inspection",
    },
    Object {
      "active": "-00:01:00",
      "counter": 7,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-08T09:39:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palcc",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 7,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-08T09:46:05.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "facef",
          "id": 58696,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqw",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
  ],
  "oee": Object {
    "last_week_of_hours": Immutable.List [
      Object {
        "date": 2018-02-02T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-02-02T09:42:05.000Z,
        "hours": 0.5,
        "station": "MC #1",
      },
      Object {
        "date": 2018-02-02T09:52:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
      Object {
        "date": 2018-02-08T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-02-08T09:24:05.000Z,
        "hours": 0.2,
        "station": "MC #1",
      },
      Object {
        "date": 2018-02-08T09:34:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
    ],
    "system_active_hours_per_week": 168,
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;

exports[`processes new log events into last30: last30 with 27 days ago, 2 days ago, and today 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "palaa": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-06T09:45:05.000Z,
          "y": 44,
        },
      ],
      "palbb": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "part222-2": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part222",
            "process": 2,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-06T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 18,
            "completed": false,
            "isLabor": false,
            "part": "part222",
            "process": 2,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-06T09:30:05.000Z,
            "y": 18,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part222",
            "process": 2,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-06T09:40:05.000Z,
            "y": 3,
          },
        ],
      },
      "part222-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "isLabor": false,
            "part": "part222",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "part111-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "isLabor": false,
            "part": "part111",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
        ],
      },
    },
    "station_groups": Immutable.Set [
      "L/U",
      "MC",
    ],
  },
  "inspection": Object {
    "by_part": Immutable.Map {
      Immutable.Record {
        "part": "part222",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 29838,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-06T09:45:05.000Z,
        },
        Object {
          "materialID": 29838,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-01-06T09:52:05.000Z,
        },
        Object {
          "materialID": 19656,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 19656,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-01-31T09:58:05.000Z,
        },
      ],
      Immutable.Record {
        "part": "part111",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 70329,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 70329,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-02-02T10:04:05.000Z,
        },
      ],
    },
  },
  "latest_log_counter": 7,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": Immutable.Set [
      "Insp1",
    ],
    "matsById": Immutable.Map {
      29838: Object {
        "completedInspections": Object {
          "Insp1": 2018-01-06T09:52:05.000Z,
        },
        "completed_procs": Array [
          2,
        ],
        "jobUnique": "uniqc",
        "last_event": 2018-01-06T09:52:05.000Z,
        "materialID": 29838,
        "partName": "part222",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
      19656: Object {
        "completedInspections": Object {
          "Insp1": 2018-01-31T09:58:05.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqz",
        "last_event": 2018-01-31T09:58:05.000Z,
        "materialID": 19656,
        "partName": "part222",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
      70329: Object {
        "completedInspections": Object {
          "Insp1": 2018-02-02T10:04:05.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqi",
        "last_event": 2018-02-02T10:04:05.000Z,
        "materialID": 70329,
        "partName": "part111",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
    },
  },
  "most_recent_10_events": Array [
    Object {
      "active": "00:00:00",
      "counter": 7,
      "elapsed": "00:00:00",
      "endUTC": 2018-01-31T09:58:05.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face5",
          "id": 19656,
          "numproc": 4,
          "part": "part222",
          "proc": 1,
          "uniq": "uniqz",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
    Object {
      "active": "00:06:00",
      "counter": 0,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-02T09:03:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 1,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-02T09:09:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "LOAD",
      "result": "LOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:30:00",
      "counter": 2,
      "elapsed": "00:30:00",
      "endUTC": 2018-02-02T09:12:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:30:00",
      "counter": 3,
      "elapsed": "00:30:00",
      "endUTC": 2018-02-02T09:42:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "proga",
      "result": "",
      "startofcycle": false,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:49:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:52:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "palbb",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 6,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T09:57:05.000Z,
      "loc": "Inspection",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "",
      "program": "ignored,Insp1,P6,S4",
      "result": "True",
      "startofcycle": false,
      "type": "Inspection",
    },
    Object {
      "active": "-00:01:00",
      "counter": 7,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-02T09:57:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palbb",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 7,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T10:04:05.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face4",
          "id": 70329,
          "numproc": 4,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqi",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
  ],
  "oee": Object {
    "last_week_of_hours": Immutable.List [
      Object {
        "date": 2018-01-31T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-01-31T09:36:05.000Z,
        "hours": 0.4,
        "station": "MC #1",
      },
      Object {
        "date": 2018-01-31T09:46:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
      Object {
        "date": 2018-02-02T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-02-02T09:42:05.000Z,
        "hours": 0.5,
        "station": "MC #1",
      },
      Object {
        "date": 2018-02-02T09:52:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
    ],
    "system_active_hours_per_week": 168,
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;

exports[`refreshes new events into last30: last30 with 2 days ago, today, and 6 days from now 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "palbb": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:05.000Z,
          "y": 44,
        },
      ],
      "palcc": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-08T09:39:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "part222-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "isLabor": false,
            "part": "part222",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "part111-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-08T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "isLabor": false,
            "part": "part111",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
          Object {
            "active": 12,
            "completed": false,
            "isLabor": false,
            "part": "part111",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-08T09:24:05.000Z,
            "y": 12,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-08T09:34:05.000Z,
            "y": 3,
          },
        ],
      },
    },
    "station_groups": Immutable.Set [
      "L/U",
      "MC",
    ],
  },
  "inspection": Object {
    "by_part": Immutable.Map {
      Immutable.Record {
        "part": "part222",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 56627,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 56627,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-01-31T09:58:05.000Z,
        },
      ],
      Immutable.Record {
        "part": "part111",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 62822,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 62822,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-02-02T10:04:05.000Z,
        },
        Object {
          "materialID": 57245,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-08T09:39:05.000Z,
        },
        Object {
          "materialID": 57245,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-02-08T09:46:05.000Z,
        },
      ],
    },
  },
  "latest_log_counter": 7,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": Immutable.Set [
      "Insp1",
    ],
    "matsById": Immutable.Map {
      62822: Object {
        "completedInspections": Object {
          "Insp1": 2018-02-02T10:04:05.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniq7",
        "last_event": 2018-02-02T10:04:05.000Z,
        "materialID": 62822,
        "partName": "part111",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
      57245: Object {
        "completedInspections": Object {
          "Insp1": 2018-02-08T09:46:05.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqr",
        "last_event": 2018-02-08T09:46:05.000Z,
        "materialID": 57245,
        "partName": "part111",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
    },
  },
  "most_recent_10_events": Array [
    Object {
      "active": "00:00:00",
      "counter": 7,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T10:04:05.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
    Object {
      "active": "00:06:00",
      "counter": 0,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-08T09:03:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 1,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-08T09:09:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "palcc",
      "program": "LOAD",
      "result": "LOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:12:00",
      "counter": 2,
      "elapsed": "00:12:00",
      "endUTC": 2018-02-08T09:12:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:12:00",
      "counter": 3,
      "elapsed": "00:12:00",
      "endUTC": 2018-02-08T09:24:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "palcc",
      "program": "progr",
      "result": "",
      "startofcycle": false,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-08T09:31:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "palcc",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-08T09:34:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "palcc",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 6,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-08T09:39:05.000Z,
      "loc": "Inspection",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "",
      "program": "ignored,Insp1,P6,S4",
      "result": "True",
      "startofcycle": false,
      "type": "Inspection",
    },
    Object {
      "active": "-00:01:00",
      "counter": 7,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-08T09:39:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palcc",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 7,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-08T09:46:05.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face6",
          "id": 57245,
          "numproc": 3,
          "part": "part111",
          "proc": 1,
          "uniq": "uniqr",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
  ],
  "oee": Object {
    "last_week_of_hours": Immutable.List [
      Object {
        "date": 2018-02-02T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-02-02T09:42:05.000Z,
        "hours": 0.5,
        "station": "MC #1",
      },
      Object {
        "date": 2018-02-02T09:52:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
      Object {
        "date": 2018-02-08T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-02-08T09:24:05.000Z,
        "hours": 0.2,
        "station": "MC #1",
      },
      Object {
        "date": 2018-02-08T09:34:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
    ],
    "system_active_hours_per_week": 168,
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;

exports[`refreshes new events into last30: last30 with 27 days ago, 2 days ago, and today 1`] = `
Object {
  "cycles": Object {
    "by_pallet": Immutable.Map {
      "palaa": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-06T09:45:05.000Z,
          "y": 44,
        },
      ],
      "palbb": Array [
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-01-31T09:51:05.000Z,
          "y": 44,
        },
        Object {
          "active": -1,
          "completed": false,
          "x": 2018-02-02T09:57:05.000Z,
          "y": 44,
        },
      ],
    },
    "by_part_then_stat": Immutable.Map {
      "part222-2": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part222",
            "process": 2,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-06T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 18,
            "completed": false,
            "isLabor": false,
            "part": "part222",
            "process": 2,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-06T09:30:05.000Z,
            "y": 18,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part222",
            "process": 2,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-06T09:40:05.000Z,
            "y": 3,
          },
        ],
      },
      "part222-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-01-31T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 24,
            "completed": false,
            "isLabor": false,
            "part": "part222",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-01-31T09:36:05.000Z,
            "y": 24,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part222",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-01-31T09:46:05.000Z,
            "y": 3,
          },
        ],
      },
      "part111-1": Immutable.Map {
        "L/U #1": Array [
          Object {
            "active": 6,
            "completed": false,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 1,
            "x": 2018-02-02T09:09:05.000Z,
            "y": 6,
          },
        ],
        "MC #1": Array [
          Object {
            "active": 30,
            "completed": false,
            "isLabor": false,
            "part": "part111",
            "process": 1,
            "stationGroup": "MC",
            "stationNumber": 1,
            "x": 2018-02-02T09:42:05.000Z,
            "y": 30,
          },
        ],
        "L/U #2": Array [
          Object {
            "active": 3,
            "completed": true,
            "isLabor": true,
            "part": "part111",
            "process": 1,
            "stationGroup": "L/U",
            "stationNumber": 2,
            "x": 2018-02-02T09:52:05.000Z,
            "y": 3,
          },
        ],
      },
    },
    "station_groups": Immutable.Set [
      "L/U",
      "MC",
    ],
  },
  "inspection": Object {
    "by_part": Immutable.Map {
      Immutable.Record {
        "part": "part222",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 90816,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-06T09:45:05.000Z,
        },
        Object {
          "materialID": 90816,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-01-06T09:52:05.000Z,
        },
        Object {
          "materialID": 56627,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-01-31T09:51:05.000Z,
        },
        Object {
          "materialID": 56627,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-01-31T09:58:05.000Z,
        },
      ],
      Immutable.Record {
        "part": "part111",
        "inspType": "Insp1",
      }: Array [
        Object {
          "materialID": 62822,
          "result": Object {
            "counter": Object {
              "inspType": "Insp1",
              "pallets": Array [
                "6",
              ],
              "part": "ignored",
              "stations": Array [
                "4",
              ],
            },
            "toInspect": true,
            "type": 0,
          },
          "time": 2018-02-02T09:57:05.000Z,
        },
        Object {
          "materialID": 62822,
          "result": Object {
            "success": true,
            "type": 1,
          },
          "time": 2018-02-02T10:04:05.000Z,
        },
      ],
    },
  },
  "latest_log_counter": 7,
  "latest_scheduleId": undefined,
  "mat_summary": Object {
    "inspTypes": Immutable.Set [
      "Insp1",
    ],
    "matsById": Immutable.Map {
      90816: Object {
        "completedInspections": Object {
          "Insp1": 2018-01-06T09:52:05.000Z,
        },
        "completed_procs": Array [
          2,
        ],
        "jobUnique": "uniq9",
        "last_event": 2018-01-06T09:52:05.000Z,
        "materialID": 90816,
        "partName": "part222",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
      56627: Object {
        "completedInspections": Object {
          "Insp1": 2018-01-31T09:58:05.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniqp",
        "last_event": 2018-01-31T09:58:05.000Z,
        "materialID": 56627,
        "partName": "part222",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
      62822: Object {
        "completedInspections": Object {
          "Insp1": 2018-02-02T10:04:05.000Z,
        },
        "completed_procs": Array [
          1,
        ],
        "jobUnique": "uniq7",
        "last_event": 2018-02-02T10:04:05.000Z,
        "materialID": 62822,
        "partName": "part111",
        "signaledInspections": Array [
          "Insp1",
        ],
      },
    },
  },
  "most_recent_10_events": Array [
    Object {
      "active": "00:00:00",
      "counter": 7,
      "elapsed": "00:00:00",
      "endUTC": 2018-01-31T09:58:05.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face8",
          "id": 56627,
          "numproc": 4,
          "part": "part222",
          "proc": 1,
          "uniq": "uniqp",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
    Object {
      "active": "00:06:00",
      "counter": 0,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-02T09:03:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:06:00",
      "counter": 1,
      "elapsed": "00:06:00",
      "endUTC": 2018-02-02T09:09:05.000Z,
      "loc": "L/U",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "LOAD",
      "result": "LOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:30:00",
      "counter": 2,
      "elapsed": "00:30:00",
      "endUTC": 2018-02-02T09:12:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:30:00",
      "counter": 3,
      "elapsed": "00:30:00",
      "endUTC": 2018-02-02T09:42:05.000Z,
      "loc": "MC",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "progw",
      "result": "",
      "startofcycle": false,
      "type": "MachineCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 4,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:49:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "",
      "result": "",
      "startofcycle": true,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:03:00",
      "counter": 5,
      "elapsed": "00:03:00",
      "endUTC": 2018-02-02T09:52:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "palbb",
      "program": "UNLOAD",
      "result": "UNLOAD",
      "startofcycle": false,
      "type": "LoadUnloadCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 6,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T09:57:05.000Z,
      "loc": "Inspection",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "",
      "program": "ignored,Insp1,P6,S4",
      "result": "True",
      "startofcycle": false,
      "type": "Inspection",
    },
    Object {
      "active": "-00:01:00",
      "counter": 7,
      "elapsed": "00:44:00",
      "endUTC": 2018-02-02T09:57:05.000Z,
      "loc": "L/U",
      "locnum": 2,
      "material": Array [],
      "pal": "palbb",
      "program": "",
      "result": "PalletCycle",
      "startofcycle": false,
      "type": "PalletCycle",
    },
    Object {
      "active": "00:00:00",
      "counter": 7,
      "elapsed": "00:00:00",
      "endUTC": 2018-02-02T10:04:05.000Z,
      "loc": "InspectionComplete",
      "locnum": 1,
      "material": Array [
        Object {
          "face": "face7",
          "id": 62822,
          "numproc": 2,
          "part": "part111",
          "proc": 1,
          "uniq": "uniq7",
        },
      ],
      "pal": "",
      "program": "Insp1",
      "result": "true",
      "startofcycle": false,
      "type": "InspectionResult",
    },
  ],
  "oee": Object {
    "last_week_of_hours": Immutable.List [
      Object {
        "date": 2018-01-31T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-01-31T09:36:05.000Z,
        "hours": 0.4,
        "station": "MC #1",
      },
      Object {
        "date": 2018-01-31T09:46:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
      Object {
        "date": 2018-02-02T09:09:05.000Z,
        "hours": 0.1,
        "station": "L/U #1",
      },
      Object {
        "date": 2018-02-02T09:42:05.000Z,
        "hours": 0.5,
        "station": "MC #1",
      },
      Object {
        "date": 2018-02-02T09:52:05.000Z,
        "hours": 0.05,
        "station": "L/U #2",
      },
    ],
    "system_active_hours_per_week": 168,
  },
  "sim_use": Object {
    "production": Immutable.List [],
    "station_use": Immutable.List [],
  },
}
`;
